modal with background blurr, input loading fixed

--- a/finalProject/static/article/css/components/footer.css
+++ b/finalProject/static/article/css/components/footer.css
@@ -1,6 +1,6 @@
 footer {
   display: flex;
-  height: 70px;
+  height: 100px;
   width: 100%;
   flex-direction: column;
   align-items: flex-start;
@@ -9,4 +9,5 @@ footer {
   padding: 30px;
   line-height: 25px;
   background: #3c4dac;
+  z-index: 4;
 }
