--- a/finalProject/static/article/css/components/modal.css
+++ b/finalProject/static/article/css/components/modal.css
@@ -49,19 +49,20 @@
 }
 
 #overlay {
-  position: fixed;
-  opacity: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  pointer-events: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  z-index: 2;
+  align-items: center;
 }
 
 #overlay.active {
-  opacity: 1;
-  pointer-events: all;
+  filter: blur(15px);
+  background-color: rgba(0, 0, 0, 0.2);
+  pointer-events: none;
 }
 .link-button {
   font-size: 13px;
